// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BannerItem > render Critical banner correctly 1`] = `
.c0 {
  display: flex;
}

.c2 {
  display: flex;
}

.c3 {
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  text-align: left;
  color: #ffffff;
}

.c1 {
  border-radius: 0px 0px 16px 16px;
  background-color: #d03c30;
}

@media (min-width: 0px) {
  .c0 {
    margin-top: 8px;
  }
}

@media (min-width: 0px) {
  .c0 {
    padding: 24px;
  }
}

@media (min-width: 0px) {
  .c0 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c2 {
    align-items: center;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <p
        class="c3"
        cursor="inherit"
        title=""
      >
        This is a banner
      </p>
    </div>
    <div
      class="c2"
    />
  </div>
</div>
`;

exports[`BannerItem > render General banner correctly 1`] = `
.c0 {
  display: flex;
}

.c2 {
  display: flex;
}

.c3 {
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  text-align: left;
  color: #ffffff;
}

.c1 {
  border-radius: 0px 0px 16px 16px;
  background-color: #292924;
}

@media (min-width: 0px) {
  .c0 {
    margin-top: 8px;
  }
}

@media (min-width: 0px) {
  .c0 {
    padding: 24px;
  }
}

@media (min-width: 0px) {
  .c0 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c2 {
    align-items: center;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <p
        class="c3"
        cursor="inherit"
        title=""
      >
        This is a banner
      </p>
    </div>
    <div
      class="c2"
    />
  </div>
</div>
`;

exports[`BannerItem > render Success banner correctly 1`] = `
.c0 {
  display: flex;
}

.c2 {
  display: flex;
}

.c3 {
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  text-align: left;
  color: #ffffff;
}

.c1 {
  border-radius: 0px 0px 16px 16px;
  background-color: #317a4c;
}

@media (min-width: 0px) {
  .c0 {
    margin-top: 8px;
  }
}

@media (min-width: 0px) {
  .c0 {
    padding: 24px;
  }
}

@media (min-width: 0px) {
  .c0 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c2 {
    align-items: center;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <p
        class="c3"
        cursor="inherit"
        title=""
      >
        This is a banner
      </p>
    </div>
    <div
      class="c2"
    />
  </div>
</div>
`;

exports[`BannerItem > render Upsell banner correctly 1`] = `
.c0 {
  display: flex;
}

.c2 {
  display: flex;
}

.c3 {
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  text-align: left;
  color: #292924;
}

.c1 {
  border-radius: 0px 0px 16px 16px;
  background-color: #ff88c8;
}

@media (min-width: 0px) {
  .c0 {
    margin-top: 8px;
  }
}

@media (min-width: 0px) {
  .c0 {
    padding: 24px;
  }
}

@media (min-width: 0px) {
  .c0 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c2 {
    align-items: center;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <p
        class="c3"
        cursor="inherit"
        title=""
      >
        This is a banner
      </p>
    </div>
    <div
      class="c2"
    />
  </div>
</div>
`;
